--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Alura flix</title>
 </head>
 <body>
-<h1>Assista as recomendações da semana</h1>
+    <header>Alura flix</header>
+<h1>Assista as recomendações da semana</h1>>
+<p>Os melhores filmes de animação</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rVQelqH7dH4?si=OeWUTq2gXd44gWlT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
