Finalizamos as classes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>Alura flix</header>
     <section>     
-        <div>
+        <div class="chamada-texto">
     <h1>Assista as recomendações da semana</h1>>
 <p>Os melhores filmes de animação</p>
         </div>
