--- a/index.html
+++ b/index.html
@@ -23,5 +23,17 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/rVQelqH7dH4?si=OeWUTq2gXd44gWlT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+
+    <section>
+        <h2>Outras recomendações</h2>
+        <div>
+            <a href="https://www.youtube.com/watch?v=n7ZbJk1qgks"></a>
+            <img src="Carros.png" alt="">
+
+            <a href="https://www.youtube.com/watch?v=462RosJNAMw"></a>
+            <img src="Malvado.png" alt="">
+            
+        </div>
+    </section>
 </body>
 </html>
